--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "chip-input",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "A web component that implements a chip input and autocomplete, inspired by angular chip input",
   "main": "index.js",
+  "homepage": "https://github.com/claytongulick/chip-input#readme",
+  "bugs": { "url" : "https://github.com/claytongulick/chip-input/issues"},
+  "repository": "github:claytongulick/chip-input",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build-demo": "webpack --config ./demo/webpack.config.js",
@@ -13,6 +16,10 @@
     "input",
     "web",
     "component",
+    "web component",
+    "autocomplete",
+    "lit-element",
+    "vanilla",
     "search"
   ],
   "author": "Clayton C Gulick",
