--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chip-input",
-  "version": "0.2.18",
+  "version": "0.3.0",
   "description": "A web component that implements a chip input and autocomplete, inspired by angular chip input",
   "main": "index.js",
   "homepage": "https://github.com/claytongulick/chip-input#readme",
@@ -26,13 +26,13 @@
   ],
   "author": "Clayton C Gulick",
   "license": "MIT",
-  "dependencies": {
-    "lit-element": "^2.1.0"
-  },
   "devDependencies": {
     "clean-webpack-plugin": "^2.0.1",
     "copy-webpack-plugin": "^5.0.2",
     "webpack": "^4.41.2",
     "webpack-dev-server": "^3.9.0"
+  },
+  "dependencies": {
+    "lit": "^2.7.6"
   }
 }
